--- a/back/package.json
+++ b/back/package.json
@@ -44,6 +44,7 @@
     "@nestjs/schematics": "^10.1.3",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/buffer-to-stream": "^1.0.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
