--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sweetalert": "^2.1.2",
     "zustand": "^4.5.4"
   },
