--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^2.1.2",
     "next": "14.2.5",
