--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^2.1.2",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
