--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -14,10 +14,13 @@
     "@headlessui/react": "^2.1.2",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "stripe": "^16.6.0",
     "sweetalert": "^2.1.2",
     "zustand": "^4.5.4"
   },
