--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.2",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.3",
+    "my-app": "file:",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
