--- a/back/src/.env.example
+++ b/back/src/.env.example
@@ -1,16 +1,12 @@
-
-
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
 DB_PASSWORD=
-DB_DATABASE=
+DB_DATABASE=edufree
 
-CLOUDINARY_CLOUD_NAME =
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME =daqlqr2wv
+CLOUDINARY_API_KEY=217137764898796
+CLOUDINARY_API_SECRET=HYJekLY3s7SefW6V2BpH_DmylE4
 
-JWT_SECRET= 
-
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+JWT_SECRET= 'Paymy1234!'
+PASSWORD_APP= "zyei tuhq pnrh sony"
