--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/pdfkit": "^0.13.4",
+    "@types/pdfmake": "^0.2.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
