--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: deploy
 on:
   push:
     branches:
-      - "dev"
+      - "main"
 
 jobs:
   build:
@@ -24,5 +24,5 @@ jobs:
           context: ./back
           file: ./back/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/back-edufee:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/edufee24:latest
 
