endpoint users/signin, institution/signin eliminados

--- a/back/src/.env.example
+++ b/back/src/.env.example
@@ -1,12 +1,12 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
 DB_PASSWORD=
-DB_DATABASE=edufree
+DB_DATABASE=
 
-CLOUDINARY_CLOUD_NAME =daqlqr2wv
-CLOUDINARY_API_KEY=217137764898796
-CLOUDINARY_API_SECRET=HYJekLY3s7SefW6V2BpH_DmylE4
+CLOUDINARY_CLOUD_NAME =
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
-JWT_SECRET= 'Paymy1234!'
-PASSWORD_APP= "zyei tuhq pnrh sony"
+JWT_SECRET= 
+PASSWORD_APP=
