--- a/back/package.json
+++ b/back/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/platform-socket.io": "^10.3.10",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.10",
     "back": "file:",
     "bcrypt": "^5.1.1",
     "buffer-to-stream": "^1.0.0",
@@ -38,6 +40,7 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
     "stripe": "^16.5.0",
     "typeorm": "^0.3.20"
   },
