--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -29,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
     "stripe": "^16.6.0",
     "sweetalert": "^2.1.2",
     "zustand": "^4.5.4"
